tooltips to contacts last row added

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -407,7 +407,7 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()' class="imgbig">
                     <mat-grid-tile-header><h2>President</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/pcv1.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>p c v</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer><h2 matTooltip="Prabodh Chandrashekhar Vekhande">p c v</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
                 <span matTooltip="Shri Mukunda P Uiekey founder of JAVS "
@@ -418,7 +418,8 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()' class="imgbig">
                     <mat-grid-tile-header><h2>Vice President</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/mukunda.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>m p u</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer>
+                        <h2 matTooltip="Mukunda Premlal Uikey">m p u</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
                 <span matTooltip="Shri Deepak B Trivedi who takes much pleasure in 
@@ -429,7 +430,7 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()' class="imgbig">
                     <mat-grid-tile-header><h2>Secretary</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/deepak.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>d b t</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer><h2 matTooltip="Deepak Bhagawatilal Trivedi">d b t</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
             
@@ -440,7 +441,7 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()' class="imgbig">
                     <mat-grid-tile-header><h2>Treasurer</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/rohit.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>r k d</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer><h2 matTooltip="Rohit Kamlakar Dake">r k d</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
                 <span matTooltip="Sou Dr Smita Mahesh Chaturvedi is chief medical officer 
@@ -451,7 +452,7 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()' class="imgbig">
                     <mat-grid-tile-header><h2>Gynae cologist</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/dr.smita.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>s m c</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer><h2 matTooltip="Sou Dr Smita Mahesh Chaturvedi">s m c</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
                 <span matTooltip="Sou Namita Parkhi is chief of support staff of vatsalyam project. "
@@ -460,7 +461,7 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()'class="imgbig">
                     <mat-grid-tile-header><h2>Project Manager</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/namita.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>n p</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer><h2 matTooltip="Sou Namita Parkhi">n p</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
                 <span matTooltip="Sou Kiran Singh is responsible for maintaining our 
@@ -470,7 +471,7 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()'class="imgbig">
                     <mat-grid-tile-header><h2>Pharmacist</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/kiran.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>k c s</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer><h2 matTooltip="Kiran Singh">k c s</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
                 <span matTooltip="Mandar is youngest in the Vatsalyam team. He is responsible for all 
@@ -481,7 +482,7 @@ class="fullBg" [src]="page.image" *ngIf="!this.getIsM()">
                 <mat-grid-tile [style.border]='getImgBorder()'class="imgbig">
                     <mat-grid-tile-header><h2>Web Organizer</h2></mat-grid-tile-header>
                     <img class="cover" src="assets/mandar.jpg" height=110 width=600>
-                    <mat-grid-tile-footer><h2>m p v</h2></mat-grid-tile-footer>
+                    <mat-grid-tile-footer><h2 matTooltip="Mandar Prabodh Vekhande">m p v</h2></mat-grid-tile-footer>
                 </mat-grid-tile>
                 </span>
               </mat-grid-list>
