--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -223,10 +223,10 @@ transform: rotate(-90deg); */
         width: 12px;
         overflow-y: scroll;
         overflow-x: hidden;
-        background:green;
+        background:white;
 }
 .flex-container::-webkit-scrollbar-thumb {
-    background: blue;
+    background: white;
     border-radius: 10px;
 }
 .example-card {
@@ -243,14 +243,14 @@ transform: rotate(-90deg); */
     font-size: medium;
 }
 .example-card::-webkit-scrollbar {
-        width: 10px;
+        width: 15px;
         overflow-y: scroll;
-        background: green;
+        background: white;
         box-shadow: inset 0 0 4px #707070;
     }
     
 .example-card::-webkit-scrollbar-thumb {
-        background: blue;
+        background: gray;
         border-radius: 20px;
     }
     .example-card::-webkit-scrollbar-track {
@@ -412,10 +412,10 @@ transform: rotate(-90deg); */
             width: 20px;
             overflow-y: scroll;
             overflow-x: hidden;
-            background: green;
+            background: white;
     }
     .flex-container::-webkit-scrollbar-thumb {
-        background: blue;
+        background: gray;
         border-radius: 20px;
     }
     .tb12{
@@ -486,10 +486,10 @@ and (-webkit-min-device-pixel-ratio: 1.5) { */
             width: 12px;
             overflow-y: scroll;
             overflow-x: hidden;
-            background: greenyellow;
+            background: white;
     }
     .flex-container::-webkit-scrollbar-thumb {
-        background:green;
+        background:gray;
         border-radius: 10px;
     }
     .tb122{
@@ -577,10 +577,10 @@ and (-webkit-min-device-pixel-ratio: 1.5) { */
             width: 10px;
             overflow-y: scroll;
             overflow-x: hidden;
-            background:green;
+            background:white;
     }
     .flex-container::-webkit-scrollbar-thumb {
-        background: blue;
+        background: gray;
         border-radius: 12px;
     }
     .tb1223{
@@ -596,7 +596,7 @@ and (-webkit-min-device-pixel-ratio: 1.5) { */
         z-index:0;
         position: relative;
         top: 3;
-        left: 124%;
+        left: 144%;
     }
 }  
 
@@ -643,10 +643,10 @@ and (-webkit-min-device-pixel-ratio: 1.5) { */
     .flex-container::-webkit-scrollbar{
             width: 20px;
             overflow-y: scroll;
-            background: grey;
+            background: white;
     }
     .flex-container::-webkit-scrollbar-thumb {
-        background: blue;
+        background: gray;
         border-radius: 20px;
     }
     .tb122{
